--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Workspace</title>
+  <title>eDziennik</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+  <div class='container'>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to root_path, class: 'navbar-brand' do %>
+        <i class="fa fa-book"></i>
+        eDziennik 
+      <% end %>
+    </div>
+    <div class="collapse navbar-collapse" id="main-nav-collapse">
+      <div class="nav navbar-nav navbar-right">
+        <%# if user_signed_in? %>
+          <%#= button_to "Sign Out", '#', method: :delete, class: 'btn btn-primary navbar-btn' %>
+        <% #else %>
+          <%= link_to "Zaloguj", '#', class: 'btn btn-primary navbar-btn', method: :get %>
+        <%# end %>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <% # if user_signed_in? %>
+          <li><%#= link_to "Community", users_path %></li>
+          <li><%#= link_to "My Account", edit_user_registration_path %></li>
+        <% # end %>
+        <li><%= link_to "O stronie", '#' %></li>
+        <li><%= link_to "Kontakt", '#' %></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div>
+</nav>
+  
+<div class="container">
+  <% flash.each do |key, value| %>
+    <%= content_tag :div, value, class: "alert alert-#{key}" %>
+  <% end %>
 <%= yield %>
 
 </body>
