Added About and Contact pages, create table and model for contact

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,8 @@
           <li><%#= link_to "Community", users_path %></li>
           <li><%#= link_to "My Account", edit_user_registration_path %></li>
         <% # end %>
-        <li><%= link_to "O stronie", '#' %></li>
-        <li><%= link_to "Kontakt", '#' %></li>
+        <li><%= link_to "O stronie", about_path %></li>
+        <li><%= link_to "Kontakt", contact_path %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div>
