--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
           <li><%#= link_to "My Account", edit_user_registration_path %></li>
         <% # end %>
         <li><%= link_to "O stronie", about_path %></li>
-        <li><%= link_to "Kontakt", contact_path %></li>
+        <li><%= link_to "Kontakt", new_contact_path %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div>
