--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,9 @@
             <h3>Strona do przechowywania i udostępniania osiągnieć uczniów. Zarejestruj się jako uczestnik zajęć, aby mieć dostęp do swoich stopni.</h3>
         </div>
         <div class="col-md-4 col-md-offset-1 well">
-            <h1 class="text-center">Zarejestruj się.</h1>
+            <h1 class="text-center">Zarejestruj się</h1>
+            <%= render "devise/shared/registration" %>
+            <%= render "devise/shared/links" %>
         </div>
     </div>
         
