--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,2 +1,8 @@
-<h2>Sign up</h2>
-
+<div class="row">
+    <div class="col-md-6 col-md-offset-3 well">
+        <h1 class="text-center">Zarejestruj się</h1>
+        <p class="text-justify">Po założeniu konta będziesz miał możliwość utworzenia/edycji profilu i sprawdzenia najnowszych ocen.</p>
+        <%= render "devise/shared/registration" %>
+        <%= render "devise/shared/links" %>
+    </div>
+</div>
