--- a/app/views/devise/shared/_registration.html.erb
+++ b/app/views/devise/shared/_registration.html.erb
@@ -7,19 +7,18 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <%= f.label 'Hasło' %>
+    <em>(Minimum 8 znaków)</em>
+    <br />
     <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label 'Powtórz hasło' %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up", class: 'btn btn-success' %>
+  <div class="form-group">
+    <%= f.submit "Zarejestruj", class: 'btn btn-success' %>
   </div>
 <% end %>
