--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-7 well">
             <h1 class="text-center">eDziennik</h1>
-            <h3>Strona do przechowywania i udostępniania osiągnieć uczniów. Zarejestruj się jako uczestnik zajęć, aby mieć dostęp do swoich stopni.</h3>
+            <h3 class="text-justify">Strona do przechowywania i udostępniania osiągnieć uczniów Prywatnej Szkoły Muzycznej im. Ignacego Paderewskiego. Zarejestruj się jako uczestnik zajęć, aby mieć dostęp do swoich stopni.</h3>
         </div>
         <div class="col-md-4 col-md-offset-1 well">
             <h1 class="text-center">Zarejestruj się</h1>
