Added Create Edit and Update action for profile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,4 +13,12 @@ body {
   background:         linear-gradient(90deg, #24C6DC 10%, #514A9D 90%); /* W3C */
         
 }
+
+.alert-notice {
+  color: #FFF;
+  background-color: #337AB7;
+}
+.alert-alert {
+  background-color: #F2DEDE;
+}
         
