--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,32 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-7 well">
-            <h1 class="text-center">eDziennik</h1>
-            <h3 class="text-justify">Strona do przechowywania i udostępniania osiągnieć uczniów Prywatnej Szkoły Muzycznej im. Ignacego Paderewskiego. Zarejestruj się jako uczestnik zajęć, aby mieć dostęp do swoich stopni.</h3>
-            <%= link_to 'Utwórz profil', new_user_profile_path(current_user) if current_user %>
-        </div>
-        <div class="col-md-4 col-md-offset-1 well">
-            <h1 class="text-center">Zarejestruj się</h1>
-            <%= render "devise/shared/registration" %>
-            <%= render "devise/shared/links" %>
-        </div>
+        <%# Condition for changing home page depending on current user %>
+        <% if current_user %>
+            <% if current_user.profile %>
+                <p>Tralala profil utworzony</p>
+                <%= link_to 'Edytuj profil', edit_user_profile_path(current_user) if current_user %>
+            <% else %>
+            
+                <%= link_to 'Utwórz profil', new_user_profile_path(current_user) if current_user %>
+             
+                
+            <% end %>
+        
+        <% else %>
+        
+            <div class="col-md-7 well">
+                <h1 class="text-center">eDziennik</h1>
+                <h3 class="text-justify">Strona do przechowywania i udostępniania osiągnieć uczniów Prywatnej Szkoły Muzycznej im. Ignacego Paderewskiego. Zarejestruj się jako uczestnik zajęć, aby mieć dostęp do swoich stopni.</h3>
+                
+            </div>
+            <div class="col-md-4 col-md-offset-1 well">
+                <h1 class="text-center">Zarejestruj się</h1>
+                <%= render "devise/shared/registration" %>
+                <%= render "devise/shared/links" %>
+            </div>
+        
+        <% end %>
+        
     </div>
         
 </div>
