--- a/app/views/profiles/shared/_profile.html.erb
+++ b/app/views/profiles/shared/_profile.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @profile, url: user_profile_path do |f| %>
+<%= form_for @profile, url: user_profile_path(@user) do |f| %>
     <div class="form-group">
         <%= f.label 'Imię' %>
         <%= f.text_field :first_name, class: 'form-control' %>
