--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -38,7 +38,7 @@
     
     <p>Niezadowolony? <%= button_to "Usuń konto", registration_path(resource_name), data: { confirm: "Jesteś pewien?" }, method: :delete, class: 'btn btn-danger' %></p>
     
-    <%= link_to "Wróć", :back %>
+    <%= link_to "Wróć", :back, class: 'btn btn-default' %>
     
     
   </div>
