--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -4,6 +4,7 @@
         <p class="text-justify">Uzupełnij swój profil aby mieć dostęp do wyników zajęć.</p>
 
         <%= render "profiles/shared/profile" %>
-        
+        <%= link_to "Wróć", :back, class: 'btn btn-default' %>
     </div>
+    
 </div>
