--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,4 +21,14 @@ body {
 .alert-alert {
   background-color: #F2DEDE;
 }
-        
+.img {
+  border: 2px solid black;
+  border-radius: 10%;
+  width: 100%;
+  margin-bottom: 20px;
+}
+.img-link {
+  width: 35%;
+  display: inline-block;
+  margin: 7%;
+}
