--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,9 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4 well text-center">
+            <%= image_tag @user.profile.avatar.url, class: 'img-profil' %>
             <h1><%= @user.profile.first_name %> <%= @user.profile.last_name %></h1>
-            <h3>Uczęszcza na <%= @user.profile.year %> rok</h3>
+            <h3><%= @user.profile.year %> rok</h3>
                 
             <% if @user.email == 'admin@admin.pl' %>    
                 <h3>Opinia o uczniu:</h3><br><p><%= @user.profile.opinion %></p>
