--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,6 +33,9 @@ body {
   margin: 7%;
 }
 .img-profil {
+  -webkit-box-shadow: 0px 10px 5px 0px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow:    0px 10px 5px 0px rgba(50, 50, 50, 0.75);
+  box-shadow:         0px 10px 5px 0px rgba(50, 50, 50, 0.75);
   border-radius: 50%;
   width: 80%;
 }
