--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6 well">
+        <div class="col-md-8  col-md-offset-2 well">
             <h1 class="text-center">O stronie</h1>
+            <p>Strona w budowie</p>
         </div>
     </div>
 </div>
