--- a/app/views/profiles/shared/_profile.html.erb
+++ b/app/views/profiles/shared/_profile.html.erb
@@ -17,7 +17,7 @@
     </div>
     <div class="form-group">
         <%= f.label 'Opinia Nauczyciela' %>
-        <%= f.text_area :opinion, class: 'form-control' %>
+        <%= f.text_area :opinion, disabled: true, class: 'form-control' %>
     </div>
     <div class="form-group">
         <%= f.submit 'Zapisz', class: 'btn btn-primary' %>
