Added styles to histories pages, added links to user show page

--- a/app/views/histories/edit.html.erb
+++ b/app/views/histories/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing History</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2 well">
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @history %> |
-<%= link_to 'Back', histories_path %>
+            <h1>Edytuj Temat</h1>
+            
+            <%= render 'form' %>
+            <%= link_to 'Powrót', histories_path, class: 'btn btn-default' %>
+            
+        </div>
+    </div>
+</div>    
