--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,8 +15,8 @@
         <div class="col-md-7 col-md-offset-1 well">
             <h2 class="text-center">Wybierz przedmiot aby sprawdzić oceny.</h2>
             <div class="img-link">
-            <%= link_to image_tag("historia.png", :alt => "Historia muzyki", class: 'img'), '#' %><br>
-            <%= link_to 'Historia muzyki', '#', class: 'btn btn-success btn-block btn-lg' %>
+            <%= link_to image_tag("historia.png", :alt => "Historia muzyki", class: 'img'), histories_path %><br>
+            <%= link_to 'Historia muzyki', histories_path, class: 'btn btn-success btn-block btn-lg' %>
             </div>
             <div class="img-link">
             <%= link_to image_tag("nuty.jpg", :alt => "Formy muzyczne", class: 'img'), '#' %><br>
