--- a/app/views/histories/_form.html.erb
+++ b/app/views/histories/_form.html.erb
@@ -11,19 +11,19 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :temat %><br>
-    <%= f.text_field :temat %>
+    <%= f.text_field :temat, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :data %><br>
-    <%= f.date_select :data %>
+    <%= f.date_select :data, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :ocena %><br>
-    <%= f.number_field :ocena %>
+    <%= f.number_field :ocena, class: 'form-control' %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <%= f.submit 'Zapisz', class: 'btn btn-success' %>
   </div>
 <% end %>
