--- a/app/views/tests/edit.html.erb
+++ b/app/views/tests/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-2 well">
-        <h1 class="text-center">Nowy sprawdzian</h1>
-        <%= render "tests/form" %>
+        <h1 class="text-center">Edytuj wpis</h1>
+        <%= render "form" %>
         
     </div>
 </div>
