--- a/app/views/grades/_form.html.erb
+++ b/app/views/grades/_form.html.erb
@@ -1,9 +1,26 @@
-<%= form_for @grade, url: create_grade_path(@user) do |f| %>
+<%= form_for @grade do |f| %>
+    <div class="form-group">
+        <%= f.label 'Temat' %>
+        <%= f.select :test_id do %>
+            <%= @tests.each do |t| -%>
+                <%= content_tag(:option, t.topic, value: t.id) %>
+            <% end %>
+        <% end %>
+    </div>
+    <div class="form-group">
+        <%= f.label 'Uczeń' %>
+        <%= f.select :user_id do %>
+            <%= @users.each do |u| -%>
+                <%= content_tag(:option, "#{u.profile.last_name} #{u.profile.first_name}", value: u.id) %>
+            <% end %>
+        <% end %>
+    </div>
     <div class="form-group">
         <%= f.label 'Ocena' %>
         <%= f.select :result, [1, 2, 3, 4, 5, 6], {}, class: 'form-control' %> 
-    </div>
+    </div>    
     <div class="form-group">
         <%= f.submit 'Zapisz', class: 'btn btn-success' %>
     </div>
 <% end %>
+
