--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,35 @@
+<% if current_user.email == 'admin@admin.pl' %>
+    <div class="jumbotron">
+        <h1 class="text-center">Witaj Nauczycielu!</h1>
+    </div>
+    <div class="container"> 
+        <div class="row">
+            <div class="col-md-5 well">
+                <h1 class="text-center">Sprawdziany</h1>
+                <h3>Dodaj kolejne sprawdziany z przediotów, które prowadzisz aby móc wstawić uczniom oceny.</h3><br>
+                <%= link_to 'Nowy sprawdzian', new_test_path, class: 'btn btn-success form-control' %>
+            </div>
+            <div class="col-md-5 col-md-offset-1 well">
+                <h1 class="text-center">Oceny</h1>
+                <h3>Wybierz z listy dostępne tematy zaliczeń i oceń kolejnych uczniów.</h3><br><br>
+                <%= link_to 'Nowa ocena', new_grade_path, class: 'btn btn-success form-control' %>
+            </div>
+        </div>
+    </div>
+            
+            
+<% else %>
 <div class="container">
     <div class="row">
         <div class="col-md-7 well">
             <h1 class="text-center">eDziennik</h1>
             <h3 class="text-justify">Strona do przechowywania i udostępniania osiągnieć uczniów Prywatnej Szkoły Muzycznej im. Ignacego Paderewskiego. Zarejestruj się jako uczestnik zajęć, aby mieć dostęp do swoich stopni.</h3>
-            
         </div>
         <div class="col-md-4 col-md-offset-1 well">
             <h1 class="text-center">Zarejestruj się</h1>
             <%= render "devise/shared/registration" %>
             <%= render "devise/shared/links" %>
         </div>
-   
     </div>
-        
 </div>
+<% end %>
