--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -3,6 +3,7 @@
         <h1 class="text-center">eDziennik</h1>
         <p>Poniżej widoczna jest lista wszystkich sprawdzianów. Aby utworzyć nowy kliknij na przycisk <em>Nowy.</em></p>
         <%= link_to 'Nowy', new_test_path, class: 'btn btn-success btn-lg' %>
+        <%= link_to 'Powrót', root_path, class: 'btn btn-default' %>
     </div>
     <div class="col-md-8 col-md-offset-2 well">
         <table class="table">
@@ -11,7 +12,6 @@
                 <th>Temat</th>
                 <th>Data</th>
                 <th></th>
-                <th></th>
             </tr>
         <% @tests.each do |t| %>
         
@@ -19,8 +19,8 @@
             <td><%= t.subject %></td>
             <td><%= t.topic %></td>
             <td><%= t.date %></td>
-            <td><%= link_to 'Edytuj', edit_test_path(t), class: 'btn btn-info' %></td>
-            <td><%= button_to 'Usuń', destroy_test_path(t), method: :delete, data: { confirm: 'Na pewno?' }, class: 'btn btn-danger' %></td>
+            <td class="text-right"><%= link_to 'Edytuj', edit_test_path(t), class: 'btn btn-info' %>
+            <%= link_to 'Usuń', destroy_test_path(t), method: :delete, data: { confirm: 'Na pewno?' }, class: 'btn btn-danger' %></td>
             </tr>
                 
         <% end %>
