--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 well text-center">
+<div class="row">
+    <div class="col-md-4 text-center">
+        <div class="well">
             <%= image_tag @user.profile.avatar.url, class: 'img-profil' %>
             <h1><%= @user.profile.first_name %> <%= @user.profile.last_name %></h1>
             <h3><%= @user.profile.year %> rok</h3>
@@ -13,16 +13,19 @@
             <%= link_to 'Edytuj profil', edit_user_profile_path(@user), class: 'form-control btn btn-info' %>
             <%= link_to 'Powrót', users_path, class: 'form-control btn btn-default' %> 
         </div>
-        <div class="col-md-7 col-md-offset-1 well">
+    </div>    
+    <div class="col-md-7 col-md-offset-1">
+        <div class="well">
             <h2 class="text-center">Wybierz przedmiot aby sprawdzić oceny.</h2>
             <div class="img-link">
             <%= link_to image_tag("historia.png", :alt => "Historia muzyki", class: 'img'), '#' %><br>
-            <%= link_to 'Historia muzyki', '#', class: 'btn btn-success btn-block btn-lg' %>
+            <%= link_to 'Historia muzyki', grade_path, class: 'btn btn-success btn-block btn-lg' %>
             </div>
             <div class="img-link">
             <%= link_to image_tag("nuty.jpg", :alt => "Formy muzyczne", class: 'img'), '#' %><br>
             <%= link_to 'Formy muzyczne', '#', class: 'btn btn-success btn-block btn-lg' %>
             </div>
         </div>
-    </div>
-</div>    
+    </div>    
+</div>
+  
