--- a/app/views/grades/show.html.erb
+++ b/app/views/grades/show.html.erb
@@ -1,24 +1,11 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
         <div class="well">
-            <h1 class="text-center">Oceny z Historii Muzyki</h1><br>
-            <table class="table">
-            <tr>
-                <th>Temat</th>
-                <th>Data</th>
-                <th>Ocena</th>
-            </tr>
-            
-            <% @grades.each do |g| %>
-            <tr>
-                <% if Test.find(g.test_id).subject == 'Historia Muzyki' %>
-                    <td><%= Test.find(g.test_id).topic %></td> 
-                    <td><%= Test.find(g.test_id).date %>
-                    <td><%= g.result %></td>
-                <% end %>
-            </tr>
+            <% if params[:subject] == 'Historia' %>
+                <%= render 'history' %>
+            <% else %>
+                <%= render 'forms' %>
             <% end %>
-            </table>
         
             <div class="text-right">        
                 <%= link_to 'Powrót', user_path, class: 'btn btn-default' %>
