Added some before_filters to controllers

--- a/app/views/grades/index.html.erb
+++ b/app/views/grades/index.html.erb
@@ -1,7 +1,8 @@
 <div class="row">
     <div class="jumbotron">
         <h1 class="text-center">eDziennik</h1>
-        <p>Poniżej widoczne są wyniki wszystkich uczniów. Aby wstawić ocenę kliknij na przycisk <em>Nowa.</em> Wybierz <em>Uczniowie</em> w celu wyświetlenia wszystkich uczestników zajęć.</p>
+        <p>Poniżej widoczne są wyniki wszystkich uczniów. Aby wstawić ocenę kliknij na przycisk <em>Nowa.</em> Wybierz <em>Uczniowie</em> 
+        w celu wyświetlenia wszystkich uczestników zajęć.</p>
         <%= link_to 'Nowa', new_grade_path, class: 'btn btn-success btn-lg' %>
         <%= link_to 'Uczniowie', users_path, class: 'btn btn-default' %>
         <%= link_to 'Powrót', root_path, class: 'btn btn-default' %>        
