--- a/app/views/grades/edit.html.erb
+++ b/app/views/grades/edit.html.erb
@@ -1,7 +1,9 @@
 <div class="row">
-    <div class="col-md-8 col-md-offset-2 well">
-        <h1 class="text-center">Edytuj wpis</h1>
-        <%= render "form" %>
-         <%= link_to 'Powrót', :back, class: 'btn btn-default' %>
+    <div class="col-md-8 col-md-offset-2">
+        <div class=" well">
+            <h1 class="text-center">Edytuj wpis</h1>
+            <%= render "form" %>
+             <%= link_to 'Powrót', :back, class: 'btn btn-default' %>
+        </div>
     </div>
 </div>
