--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,11 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-8  col-md-offset-2 well">
-            <h1 class="text-center">O stronie</h1>
-            <p>Strona w budowie</p>
+<div class="row">
+    <div class="col-md-8 col-md-offset-2">
+        <div class="well">
+            <h1 class="text-center">O stronie</h1><br>
+            <p class="text-justify">Witaj w internetowym dzienniku zajęć. Nauczyciel może tu dodawać sprawdziany, wystawiać uczniom oceny oraz opinie dotyczące 
+            całokształtu współpracy z uczestnikiem zajęc. Aby zobaczyć jak to wygląda od strony prowadzącego, zaloguj się wykorzystując login 
+            <em>admin@admin.pl</em> i hasło <em>987654321</em>. Jeżeli jesteś zainteresowany jakie możliwości będzie miał tu uczeń, utwórz 
+            swoje konto lub zaloguj na już istniejące - np. <em>md@test.pl</em> z hasłem <em>123456789</em>.</p>
         </div>
     </div>
 </div>
