--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,9 +1,10 @@
 <div class="row">
-    <div class="col-md-6 col-md-offset-3 well">
-        <h1 class="text-center">Utwórz profil</h1>
-        <p class="text-justify">Uzupełnij swój profil aby mieć dostęp do wyników zajęć.</p>
-
-        <%= render "profiles/shared/profile" %>
-        
+    <div class="col-md-6 col-md-offset-3">
+        <div class="well">
+            <h1 class="text-center">Utwórz profil</h1>
+            <p class="text-justify">Uzupełnij swój profil aby mieć dostęp do wyników zajęć.</p>
+    
+            <%= render "profiles/shared/profile" %>
+        </div>
     </div>
 </div>
