--- a/app/views/grades/new.html.erb
+++ b/app/views/grades/new.html.erb
@@ -1,8 +1,10 @@
 <div class="row">
-    <div class="col-md-8 col-md-offset-2 well">
-        <h1 class="text-center">Wstaw ocenę</h1>
-
-        <%= render 'form' %>
-        <%= link_to 'Powrót', :back, class: 'btn btn-default' %>
+    <div class="col-md-8 col-md-offset-2">
+        <div class="well">
+            <h1 class="text-center">Wstaw ocenę</h1>
+    
+            <%= render 'form' %>
+            <%= link_to 'Powrót', :back, class: 'btn btn-default' %>
+        </div>
     </div>
 </div>
