--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,14 +23,18 @@
 <% else %>
 <div class="container">
     <div class="row">
-        <div class="col-md-7 well">
-            <h1 class="text-center">eDziennik</h1>
-            <h3 class="text-justify">Strona do przechowywania i udostępniania osiągnieć uczniów Prywatnej Szkoły Muzycznej im. Ignacego Paderewskiego. Zarejestruj się jako uczestnik zajęć, aby mieć dostęp do swoich stopni.</h3>
+        <div class="col-md-7">
+            <div class="well">
+                <h1 class="text-center">eDziennik</h1>
+                <h3 class="text-justify">Strona do przechowywania i udostępniania osiągnieć uczniów Prywatnej Szkoły Muzycznej im. Ignacego Paderewskiego. Zarejestruj się jako uczestnik zajęć, aby mieć dostęp do swoich stopni.</h3>
+            </div>
         </div>
-        <div class="col-md-4 col-md-offset-1 well">
-            <h1 class="text-center">Zarejestruj się</h1>
-            <%= render "devise/shared/registration" %>
-            <%= render "devise/shared/links" %>
+        <div class="col-md-4 col-md-offset-1">
+            <div class="well">
+                <h1 class="text-center">Zarejestruj się</h1>
+                <%= render "devise/shared/registration" %>
+                <%= render "devise/shared/links" %>
+            </div>
         </div>
     </div>
 </div>
