--- a/app/views/tests/new.html.erb
+++ b/app/views/tests/new.html.erb
@@ -1,7 +1,8 @@
 <div class="row">
-    <div class="col-md-8 col-md-offset-2 well">
-        <h1 class="text-center">Nowy sprawdzian</h1>
-        <%= render "tests/form" %>
-        
+    <div class="col-md-8 col-md-offset-2">
+        <div class="well">
+            <h1 class="text-center">Nowy sprawdzian</h1>
+            <%= render "tests/form" %>
+        </div>
     </div>
 </div>
