--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
-    <div class="col-md-8 col-md-offset-2 well">
+    <div class="col-md-8 col-md-offset-2">
+      <div class="well">
         <h1 class="text-center">Lista uczniów:</h1>
             <ul class="list-unstyled">
             <% @users.each do |u| %>
@@ -27,5 +28,6 @@
             <div class="text-right">
             <%= link_to 'Powrót', grades_path, class: 'btn btn-default' %>  
             </div>
+      </div>      
     </div>
 </div>
