--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
 <% if user_signed_in? && current_user.email == 'admin@admin.pl' %>
     <div class="jumbotron">
         <h1 class="text-center">Witaj Nauczycielu!</h1>
+        <p>Zajrzyj na listę uczniów, aby sprawdzić wyniki konkretnej osoby.</p>
+        <%= link_to 'Uczniowie', users_path, class: 'btn btn-default' %>
     </div>
         <div class="row">
             <div class="col-md-6">
