--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,11 +19,11 @@
         <div class="well">
             <h2 class="text-center">Wybierz przedmiot aby sprawdzić oceny.</h2>
             <div class="img-link">
-            <%= link_to image_tag("historia.png", :alt => "Historia muzyki", class: 'img'), '#' %><br>
+            <%= link_to image_tag("historia.png", :alt => "Historia muzyki", class: 'img'), grade_path(subject: 'Historia') %><br>
             <%= link_to 'Historia muzyki', grade_path(subject: 'Historia'), class: 'btn btn-success btn-block btn-lg' %>
             </div>
             <div class="img-link">
-            <%= link_to image_tag("nuty.jpg", :alt => "Formy muzyczne", class: 'img'), '#' %><br>
+            <%= link_to image_tag("nuty.jpg", :alt => "Formy muzyczne", class: 'img'), grade_path(subject: 'Formy') %><br>
             <%= link_to 'Formy muzyczne', grade_path(subject: 'Formy'), class: 'btn btn-success btn-block btn-lg' %>
             </div>
         </div>
