Added validation to Grade, changed links in grades and tests

--- a/app/views/grades/new.html.erb
+++ b/app/views/grades/new.html.erb
@@ -4,7 +4,7 @@
             <h1 class="text-center">Wstaw ocenę</h1>
     
             <%= render 'form' %>
-            <%= link_to 'Powrót', :back, class: 'btn btn-default' %>
+            <%= link_to 'Powrót', grades_path, class: 'btn btn-default' %>
         </div>
     </div>
 </div>
