--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -15,4 +15,4 @@
         <%= f.submit 'Zapisz', class: 'btn btn-success' %>
     </div>
 <% end %>
-<%= link_to 'Powrót', :back, class: 'btn btn-default' %>
+<%= link_to 'Powrót', tests_path, class: 'btn btn-default' %>
