--- a/app/views/grades/show.html.erb
+++ b/app/views/grades/show.html.erb
@@ -1,15 +1,11 @@
 <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-        <div class="well">
-            <% if params[:subject] == 'Historia' %>
-                <%= render 'history' %>
-            <% else %>
-                <%= render 'forms' %>
-            <% end %>
-        
-            <div class="text-right">        
-                <%= link_to 'Powrót', user_path, class: 'btn btn-default' %>
-            </div>
-        </div>
+  <div class="col-md-8 col-md-offset-2">
+    <div class="well">
+      <%= render params[:subject] == 'Historia' ? 'history' : 'forms' %>
+       
+      <div class="text-right">        
+        <%= link_to 'Powrót', user_path, class: 'btn btn-default' %>
+      </div>
     </div>
+  </div>
 </div>
