--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -20,7 +20,7 @@
             <td><%= t.topic %></td>
             <td><%= t.date %></td>
             <td class="text-right"><%= link_to 'Edytuj', edit_test_path(t), class: 'btn btn-info' %>
-            <%= link_to 'Usuń', destroy_test_path(t), method: :delete, data: { confirm: 'Na pewno?' }, class: 'btn btn-danger' %></td>
+            <%= link_to 'Usuń', test_path(t), method: :delete, data: { confirm: 'Na pewno?' }, class: 'btn btn-danger' %></td>
           </tr>
         <% end %>
       </table>
