--- a/app/views/grades/_form.html.erb
+++ b/app/views/grades/_form.html.erb
@@ -8,7 +8,9 @@
     <%= f.select :user_id, {}, {}, class: 'form-control' do %>
       <%= @users.each do |u| -%>
         <% unless u.email == 'admin@admin.pl' %>
-          <%= content_tag(:option, "#{u.profile.last_name} #{u.profile.first_name}", value: u.id) %>
+          <% if u.profile %>
+            <%= content_tag(:option, "#{u.profile.last_name} #{u.profile.first_name}", value: u.id) %>
+            <% end %>
         <% end %>
       <% end %>
     <% end %>
